Fix spacing with subheader

--- a/src/scss/_objects.resources.scss
+++ b/src/scss/_objects.resources.scss
@@ -1,5 +1,9 @@
 .resources {
 
+  &__subheader.paragraph {
+    margin-top: 0;
+  }
+
   .tiles {
     margin: -12px;
 
